--- a/东京北海道六天五夜.md
+++ b/东京北海道六天五夜.md
@@ -65,15 +65,53 @@
 
 ### DAY2（02.22 周日）酒店→东京迪士尼海洋→成田机场附近酒店
 
-| 时间        | 地点                    | 活动       | 备注                     |
-| :---------- | :---------------------- | :--------- | :----------------------- |
-| 08:00       | Comfort Hotel 东神田    | 退房、出发 |                          |
-| 09:00-12:00 | 东京迪士尼海洋          | 游玩       | **需预约**，建议提前购票 |
-| 12:00-13:00 | 迪士尼海洋              | 午餐       | 园内餐厅                 |
-| 13:00-18:00 | 东京迪士尼海洋          | 继续游玩   |                          |
-| 18:00-19:00 | 迪士尼海洋              | 晚餐       | 园内餐厅                 |
-| 19:00-20:00 | 迪士尼→成田             | 交通       | 京成线/巴士              |
-| 20:00-21:00 | Toyoko Inn 成田机场新馆 | 办理入住   | 方便次日早班机           |
+| 时间        | 地点                    | 活动                   | 备注                                  |
+| :---------- | :---------------------- | :--------------------- | :------------------------------------ |
+| 08:00       | Comfort Hotel 东神田    | 退房、出发             |                                       |
+| 09:00       | 东京迪士尼海洋          | 入园                   | **需预约**，建议提前购票              |
+| 09:00-09:30 | 迪士尼海洋              | 抽 PP + 抢 DPA         | 入园后立即抽 PP，首抢地心探险之旅 DPA |
+| 09:30-10:30 | 地心探险之旅            | 游玩（DPA）            | 优先项目                              |
+| 10:30-11:30 | 印地安纳琼斯冒险路程    | 游玩（DPA）            | 抢 DPA（1h 一刷）                     |
+| 11:30-12:30 | 念怒双神                | 游玩（PP）             | 抢 PP（2h 一刷）                      |
+| 12:30-13:30 | 园内餐厅                | 午餐 + 七宝表演秀      | 边吃边看表演                          |
+| 13:30-14:30 | 小飞侠梦幻之旅          | 游玩（SP）             | 抢 SP（1h 一刷）                      |
+| 14:30-15:30 | 海底两万里              | 游玩（PP）             | 抢 PP（2h 一刷）                      |
+| 15:40-16:10 | 雪莉玫合照              | 合照                   | 合照时间：15:40-18:10                 |
+| 16:10-17:10 | 惊魂古堡                | 游玩（DPA）            | 抢 DPA（全天开放，不着急）            |
+| 17:10-18:10 | 翱翔：梦幻奇航          | 游玩（DPA，可选）      | 类似飞跃地平线，可不抢                |
+| 18:10-19:00 | 园内餐厅                | 晚餐                   |                                       |
+| 19:00-19:35 | 达菲合照                | 合照                   | 合照时间：19:00-19:35                 |
+| 19:30       | 游船                    | 观赏                   | 推荐项目                              |
+| 20:30       | 烟花表演                | 观赏                   | 推荐项目                              |
+| 21:00-22:00 | 迪士尼→成田             | 交通                   | 京成线/巴士                           |
+| 22:00-23:00 | Toyoko Inn 成田机场新馆 | 办理入住               | 方便次日早班机                        |
+
+#### 迪士尼海洋攻略
+
+**DPA/PP 抢票规则：**
+- DPA（Disney Premier Access）和 PP（Priority Pass）只能入园后才可抢
+- 同时只能拥有各 1 个，核销完才可抢第二个
+- PP 每 2 小时抽一次，DPA 每 1 小时抢一次
+
+**推荐项目优先级：**
+1. 地心探险之旅（DPA，1h 一刷）- 首抢
+2. 印地安纳琼斯冒险路程（DPA，1h 一刷）
+3. 念怒双神（PP，2h 一刷）
+4. 惊魂古堡（DPA，1h 一刷，全天开放不着急）
+5. 翱翔：梦幻奇航（DPA，1h 一刷，可选）
+6. 小飞侠梦幻之旅（SP，1h 一刷）
+7. 海底两万里（PP，2h 一刷）
+
+**表演预约：**
+- 七宝表演秀（中午吃饭时观看）
+
+**合照时间：**
+- 雪莉玫合照：15:40-18:10
+- 达菲合照：19:00-19:35
+
+**必看项目：**
+- 19:30 游船
+- 20:30 烟花表演
 
 #### 成田机场交通
 
