--- a/东京北海道六天五夜.md
+++ b/东京北海道六天五夜.md
@@ -69,17 +69,17 @@
 | :---------- | :---------------------- | :--------------------- | :------------------------------------ |
 | 08:00       | Comfort Hotel 东神田    | 退房、出发             |                                       |
 | 09:00       | 东京迪士尼海洋          | 入园                   | **需预约**，建议提前购票              |
-| 09:00-09:30 | 迪士尼海洋              | 抽 PP + 抢 DPA         | 入园后立即抽 PP，首抢地心探险之旅 DPA |
-| 09:30-10:30 | 地心探险之旅            | 游玩（DPA）            | 优先项目                              |
-| 10:30-11:30 | 印地安纳琼斯冒险路程    | 游玩（DPA）            | 抢 DPA（1h 一刷）                     |
-| 11:30-12:30 | 念怒双神                | 游玩（PP）             | 抢 PP（2h 一刷）                      |
-| 12:30-13:30 | 园内餐厅                | 午餐 + 七宝表演秀      | 边吃边看表演                          |
-| 13:30-14:30 | 小飞侠梦幻之旅          | 游玩（SP）             | 抢 SP（1h 一刷）                      |
-| 14:30-15:30 | 海底两万里              | 游玩（PP）             | 抢 PP（2h 一刷）                      |
+| 09:00-09:30 | 迪士尼海洋              | 抢 SP + 抢 PP + 抢 DPA | 入园后立即操作                        |
+| 09:30-10:30 | 地心探险之旅            | 游玩                   | 早点去排队，不用 DPA                  |
+| 10:30-11:30 | 印地安纳琼斯冒险路程    | 游玩                   | 单人排队                              |
+| 11:30-12:30 | 念怒双神                | 游玩                   | 单人排队                              |
+| 12:30-13:30 | 园内餐厅                | 午餐                   | **需预约**                            |
+| 13:30-14:30 | 小飞侠梦幻之旅          | 游玩（SP）             | 抢 SP                                 |
+| 14:30-15:30 | 海底两万里              | 游玩（PP）             | 抢 PP                                 |
 | 15:40-16:10 | 雪莉玫合照              | 合照                   | 合照时间：15:40-18:10                 |
-| 16:10-17:10 | 惊魂古堡                | 游玩（DPA）            | 抢 DPA（全天开放，不着急）            |
-| 17:10-18:10 | 翱翔：梦幻奇航          | 游玩（DPA，可选）      | 类似飞跃地平线，可不抢                |
-| 18:10-19:00 | 园内餐厅                | 晚餐                   |                                       |
+| 16:10-17:10 | 惊魂古堡                | 游玩（DPA）            | 抢 DPA                                |
+| 17:10-18:10 | 翱翔：梦幻奇航          | 游玩（DPA）            | 抢 DPA                                |
+| 18:10-19:00 | 园内餐厅                | 晚餐                   | **需预约**                            |
 | 19:00-19:35 | 达菲合照                | 合照                   | 合照时间：19:00-19:35                 |
 | 19:30       | 游船                    | 观赏                   | 推荐项目                              |
 | 20:30       | 烟花表演                | 观赏                   | 推荐项目                              |
@@ -94,16 +94,16 @@
 - PP 每 2 小时抽一次，DPA 每 1 小时抢一次
 
 **推荐项目优先级：**
-1. 地心探险之旅（DPA，1h 一刷）- 首抢
-2. 印地安纳琼斯冒险路程（DPA，1h 一刷）
-3. 念怒双神（PP，2h 一刷）
-4. 惊魂古堡（DPA，1h 一刷，全天开放不着急）
-5. 翱翔：梦幻奇航（DPA，1h 一刷，可选）
-6. 小飞侠梦幻之旅（SP，1h 一刷）
-7. 海底两万里（PP，2h 一刷）
+1. 地心探险之旅 - 早点去排队，不用 DPA
+2. 印地安纳琼斯冒险路程 - 单人排队，不需要快速通道
+3. 念怒双神 - 单人排队，不需要快速通道
+4. 小飞侠梦幻之旅 - 抢 SP
+5. 海底两万里 - 抢 PP
+6. 惊魂古堡 - 抢 DPA
+7. 翱翔：梦幻奇航 - 抢 DPA
 
 **表演预约：**
-- 七宝表演秀（中午吃饭时观看）
+- 无
 
 **合照时间：**
 - 雪莉玫合照：15:40-18:10
@@ -129,9 +129,9 @@
 | 08:25       | 新千岁机场           | 抵达             |                                           |
 | 09:30-10:30 | Keikyu EX Hotel 札幌 | 办理入住/寄存    | 新千岁→札幌约 40 分钟                     |
 | 10:30-12:00 | 二条市场             | 午餐、采购       | 海鲜盖饭、现烤海鲜、干货                  |
-| 12:00-13:30 | 钱函                 | 海滨、拍照       | JR 函馆本线                               |
+| 12:00-13:30 | 钱函                 | 路牌和海边拍照   | JR 函馆本线                               |
 | 13:30-15:00 | 小樽站前             | 抵达小樽         | JR 快速约 30 分钟                         |
-| 15:00-16:30 | 天狗山               | 缆车、远眺       | 小樽代表性景点                            |
+| 15:00-16:30 | 天狗山               | 缆车、远眺、蓝调时刻 | 小樽代表性景点                            |
 | 16:30-17:30 | 船见坂               | 拍照             | 《情书》取景地                            |
 | 17:30-19:00 | 小樽运河             | 散步、晚餐       | 海膽專門店世壹屋 小樽運河店 或 天婦羅 Soyogi（无需预约）夜景 |
 | 19:00-20:30 | 札幌                 | 返回酒店         | JR 小樽→札幌                              |
@@ -163,7 +163,7 @@
 | 时间        | 地点               | 活动       | 备注                                  |
 | :---------- | :----------------- | :--------- | :------------------------------------ |
 | 08:00-09:00 | 定山溪万世阁酒店   | 退房、早餐 | 酒店早餐                              |
-| 09:00-10:30 | 諏訪神社           | 参拜       |                                       |
+| 09:00-10:30 | 諏訪神社           | 买御守     |                                       |
 | 10:30-11:30 | Picante Soup 或 sama | 咖喱午餐   | **建议提前预约餐厅**，札幌名物        |
 | 11:30-13:00 | 北海道大学         | 校园散步   |                                       |
 | 13:00-15:00 | 白恋人公园         | 参观、甜品 |                                       |
